--- a/resources/templates/html/layouts/base.html
+++ b/resources/templates/html/layouts/base.html
@@ -58,8 +58,8 @@
             <div id="sidebar">
                 <h3>Links</h3>
                 <ul id="links">
-                    <li><a href="http://cryogenweb.org/docs/home.html">Cryogen Docs</a></li>
-                    <li><a href="http://carmenla.me/blog/index.html">Carmen's Blog</a></li>
+                    <li><a href="http://twitter.com/ferz_co" target="_blank">Twitter profile</a></li>
+                    <li><a href="http://github.com/300zx" target="_blank">GutHub profile</a></li>
                     {% for page in sidebar-pages %}
                     <li><a href="{{page.uri}}">{{page.title}}</a></li>
                     {% endfor %}
@@ -87,7 +87,7 @@
             </div>
         </div>
     </div>
-    <footer>Copyright &copy; 2014 BLOGAWESOME
+    <footer>Copyright &copy; 2015 ferz.co
         <p style="text-align: center;">Powered by <a href="http://cryogenweb.org">Cryogen</a></p></footer>
 </div>
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
