--- a/resources/templates/css/screen.css
+++ b/resources/templates/css/screen.css
@@ -4,13 +4,35 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
     color: #333;
-    background-color: #f2f2f2;
+    background-color: #F5D3A6;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 16px;
+    background-image: url("background.jpg");
+}
+
+/* main content */
+.col-lg-9 {
+    background-color: #F5D3A6;
+    border: solid;
+    border-width: 5px;
+    border-color: #A07230;
+    padding: 0;
+    margin: 10px;
+}
+
+/* side bar */
+.col-md-3 {
+    background-color: #F5D3A6;
+    border: solid;
+    border-width: 5px;
+    border-color: #A07230;
+    margin: 10px;
+    width: 20%;
 }
 
 .container {
-    max-width: 1000px;
+    max-width: 1100px;
+    border: none;
 }
 
 .right {
@@ -19,17 +41,17 @@ body {
 }
 
 .navbar {
-    border-radius: 0;
+    /*border-radius: 0;*/
     box-shadow: 0 0 0 0,0 6px 12px rgba(34,34,34,0.3);
 }
 
 .navbar-default {
-    background-color: #428bca;
+    background-color: #553014;
     border: none;
 }
 
 .navbar-default .navbar-brand {
-    color: #fff;
+    color: #A07230;
     font-family: 'Alegreya';
 }
 
@@ -43,16 +65,16 @@ body {
 
 .navbar-default .navbar-nav li a:hover {
     color: #fff;
-    background-color: #3d80ba;
+    background-color: #B13816;
 }
 
 .navbar-default .navbar-nav .active a {
     color: #fff;
-    background-color: #3d80ba;
+    background-color: #B13816;
 }
 
 .navbar-default .navbar-toggle:hover{
-    background-color: #3d80ba;
+    background-color: #B13816;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -61,11 +83,10 @@ body {
 
 #sidebar {
     margin-left: 15px;
-    margin-top: 50px;
 }
 
 #content {
-    background-color: #fff;
+    background-color: #F5D3A6;
     border-radius: 3px;
     box-shadow: 0 0 0 0,0 6px 12px rgba(34,34,34,0.1);
 }
@@ -136,7 +157,6 @@ pre, code, .hljs {
         padding: 25px 15px;
     }
     #content{
-        margin-top: 30px;
         padding: 30px 40px;
     }
 }
